# yumi_dissertation

./: .flake8  .gitignore  .gitmodules  README.md
rapid/: TRobRAPID.mod
yumi_egm_interface/: README.md  package.xml  setup.cfg  setup.py
yumi_egm_interface/launch/: yumi_egm.launch.py
yumi_egm_interface/yumi_egm_interface/: __init__.py  egm_manager.py  egm_trajectory_controller.py
yumi_ros2/: .gitignore  LICENSE  README.md
yumi_ros2/yumi_description/: package.xml
yumi_ros2/yumi_description/urdf/: yumi.urdf
yumi_ros2/yumi_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
yumi_ros2/yumi_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_controllers_egm.yaml  ompl_planning.yaml  yumi.srdf
yumi_ros2/yumi_moveit_config/launch/: demo.launch.py
yumi_rws_interface/: README.md  package.xml  setup.cfg  setup.py
yumi_rws_interface/config/: gz_controllers.yaml  moveit_controllers_sim.yaml  yumi_rws.yaml
yumi_rws_interface/launch/: yumi_egm.launch.py  yumi_rws.launch.py  yumi_sim.launch.py
yumi_rws_interface/scripts/: add_table_collision.py  poses.yaml  record_poses.py  test_rws_discovery.py  yumi_task_sequence.py  yumi_utils.py
yumi_rws_interface/scripts/archive/: move_yumi.py  move_yumi_home.py  move_yumi_wasd_no_rapid.py  replay_handover_safe.py  replay_pick_place.py  teach_handover.py  teach_pick_place.py
yumi_rws_interface/test/: test_flake8.py  test_pep257.py
yumi_rws_interface/yumi_rws_interface/: __init__.py  egm_manager.py  egm_pb2.py  egm_trajectory_controller.py  gripper_action_server.py  gripper_service.py  joint_state_publisher.py  rws_client.py  rws_commander.py  rws_trajectory_controller.py
